[IMP] account_peppol, *: Peppol endpoint verification
Modules: account_edi_ubl_cii, account_peppol

This commit brings modifications to the verification process of the
partner's Peppol endpoint:
- Add a check to the endpoint with a regex provided by Peppol (based on
the eas). (See codelist on docs.peppol.eu/edelivery) The file will have
to be updated when new versions are published.
- Adding more restrictive conditions to the format check for the
eas/endpoint combination. This is done to prevent calls to peppol if the
combination has a wrong format.
- Hide the eas/endpoint fields in the partner form if the invoice edi
format is not supported by peppol. This decrease the user frustration by
limiting the 'not_valid_format' response.
- Add eas code into brackets in tracking value of peppol eas field for a
better user understanding.
- Add file format in tracking value of peppol verification state field
in case the state is 'not_valid_format'. This adds readability for the
user.
- Reset the peppol verification state to 'not_verified' if eas or
endpoint is modified because we don't want a new combination to be
marked as 'valid'.
- Add the 'automatic try' on eas: when the user tries to check the
validity of a partner on peppol, if the partner isn't found with the
given eas code we try to find it with the other known eas for the
country. If a match is found, we set the eas/endpoint combination on the
partner and we set the peppol verification state to 'valid'. This
feature eases the user action because of the peppol functioning: if a
partner isn't found on the peppol system, it doesn't mean he doesn't
exist. It only means he doesn't exist with this eas key. By adding this
'automatic try', we make sure that all possible existing eas code for
the partner's country are checked.
- Remove the alert banner saying 0208 is the recommended eas code for
Belgium. As we now do an 'automatic search', it's not needed anymore.
- Reshaping the peppol eas/endpoint/verification state fields 

--- a/addons/account_edi_ubl_cii/views/res_partner_views.xml
+++ b/addons/account_edi_ubl_cii/views/res_partner_views.xml
@@ -13,8 +13,13 @@
                        nolabel="1"
                        widget="filterable_selection"
                        options="{'whitelist_fname': 'available_peppol_eas'}"
-                       class="o_field_peppol_eas_selection"/>
-                <field name="peppol_endpoint" nolabel="1" placeholder="Your endpoint"/>
+                       class="o_field_peppol_eas_selection"
+                       invisible="not is_peppol_edi_format"/>
+                <div class="row" invisible="not is_peppol_edi_format">
+                    <div id="peppol_endpoint_partner" class="col-4">
+                        <field name="peppol_endpoint" nolabel="1" placeholder="Your endpoint"/>
+                    </div>
+                </div>
             </xpath>
         </field>
     </record>
