--- a/addons/account/views/res_config_settings_views.xml
+++ b/addons/account/views/res_config_settings_views.xml
@@ -68,10 +68,11 @@
                             <setting id="eu_service" title="If you sell goods and services to customers in a
                                 foreign EU country, you must charge VAT based on the delivery address.
                                 This rule applies regardless of where you are located."
+                                string = "EU Intra-community Distance Selling"
                                 documentation="/applications/finance/accounting/taxation/taxes/eu_distance_selling.html"
                                 help="Apply VAT of the EU country to which goods and services are delivered."
                                 invisible="'EU' not in company_country_group_codes">
-                                <field name="module_l10n_eu_oss"/>
+                                <button type="object" name="action_eu_oss_tax_mapping" icon="fa-refresh" string="OSS Tax mapping" class="btn-link"/>
                             </setting>
                             <setting id="tax_exigibility" company_dependent="1" help="Allow to configure taxes using cash basis" title="Select this if the taxes should use cash basis, which will create an entry for such taxes on a given account during reconciliation."
                                 documentation="/applications/finance/accounting/taxation/taxes/cash_basis_taxes.html">
