[FIX] sale_crm: tag_ids are for sales
The field tag_ids is only available to salespersons that can categorize
the sale order by the tags defined in CRM.

--- a/addons/sale_crm/views/sale_order_views.xml
+++ b/addons/sale_crm/views/sale_order_views.xml
@@ -15,13 +15,21 @@
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
             <field name="origin" position="after">
-                <field name="opportunity_id" context="{
+                <field name="opportunity_id" groups="sales_team.group_sale_salesman" context="{
                     'default_campaign_id': campaign_id,
                     'default_company_id': company_id,
                     'default_medium_id': medium_id,
                     'default_partner_id': partner_id,
                     'default_source_id': source_id,
                     'default_tag_ids': tag_ids,
+                    'default_type': 'opportunity',
+                }"/>
+                <field name="opportunity_id" groups="!sales_team.group_sale_salesman" context="{
+                    'default_campaign_id': campaign_id,
+                    'default_company_id': company_id,
+                    'default_medium_id': medium_id,
+                    'default_partner_id': partner_id,
+                    'default_source_id': source_id,
                     'default_type': 'opportunity',
                 }"/>
             </field>
