[FIX] sale_pdf_quote_builder: templates are sales person
Adding permissions checks on many2many fields. Quotation templates are
accessible only to salesman, but documents are accessible to all
internal users.

Part-of: odoo/odoo#217277
Related: odoo/enterprise#89371
Signed-off-by: Raphael Collet <rco@odoo.com>

--- a/addons/sale_pdf_quote_builder/views/sale_order_views.xml
+++ b/addons/sale_pdf_quote_builder/views/sale_order_views.xml
@@ -19,6 +19,7 @@
                 <page
                     name="pdf_quote_builder"
                     string="Quote Builder"
+                    groups="sales_team.group_sale_salesman"
                     invisible="not (partner_id and is_pdf_quote_builder_available) or context.get('hide_pdf_quote_builder')"
                 >
                     <!-- Needed by customContentKanbanLikeWidget to save selected documents. -->
