[IMP] crm: add rainbowman triggers & tweak lead views
Previously, the rainbowman could only be triggered on won opportunities
with an expected revenues. This meant that rainbowman messages never
got displayed for users that didn't use that field.

This commit adds additional triggers for opportunities with no expected
revenue, such as reaching 5 deals won in a single day or closing a deal
in a new country.
These triggers will also activate for opportunities with an expected
revenue, assuming no revenue record has been triggered first.

There are also minor tweaks for the Lead list view and the Lost Lead
wizard:
- Lead list view: Lost deals are now shown as a lighter shade of gray
- Lost Lead wizard: the selection for Lost Reasons is now shown as
a series of badges

task-4684660

--- a/addons/crm/wizard/crm_lead_lost_views.xml
+++ b/addons/crm/wizard/crm_lead_lost_views.xml
@@ -6,8 +6,9 @@
             <field name="arch" type="xml">
                 <form string="Lost Lead">
                     <field name="lead_ids" invisible="1"></field>
+                    <field name="lost_reason_id" placeholder="Select a Lost Reason..." widget="selection_badge" />
                     <group>
-                        <field name="lost_reason_id" placeholder="Select a Lost Reason..." options="{'no_create_edit': True}" />
+                        <label for="lost_feedback" class="o_form_label">Closing Note</label>
                         <field name="lost_feedback" placeholder="What went wrong?" nolabel="1" colspan="2"/>
                     </group>
                     <footer>
