--- a/addons/crm/views/crm_lead_views.xml
+++ b/addons/crm/views/crm_lead_views.xml
@@ -745,7 +745,8 @@
             <field name="model">crm.lead</field>
             <field name="priority">1</field>
             <field name="arch" type="xml">
-                <list string="Opportunities" sample="1" multi_edit="1">
+                <list string="Opportunities" sample="1" multi_edit="1"
+                    decoration-muted="won_status == 'lost'">
                     <header>
                         <button name="%(crm.crm_lead_lost_action)d" type="action" string="Mark Lost" />
                         <button name="%(crm.action_lead_mass_mail)d" type="action" string="Email" />
@@ -754,6 +755,7 @@
                     <field name="user_company_ids" column_invisible="True"/>
                     <field name="date_deadline" column_invisible="True"/>
                     <field name="activity_calendar_event_id" column_invisible="True"/>
+                    <field name="won_status" column_invisible="True"/>
                     <field name="create_date" optional="hide"/>
                     <field name="name" string="Opportunity" readonly="1"/>
                     <field name="partner_id" optional="hide"/>
