[IMP] mrp: introduce Standard Batch Size on BOM
Introduce a new `Batch Size` field on the Bill of Materials to define a
standard production batch size.

This feature helps users control manufacturing orders more effectively,
particularly when there is a known maximum production capacity. When enabled,
the system will automatically split and generate MOs based on the defined
batch size for scenarios like MTO, MTSO, MPS, and replenishment.

Manual MO creation remains unaffected. However, for automatically generated
MOs, the system will ensure the quantity never exceeds the configured batch
size. Additionally, when splitting an MO, the batch size will be pre-filled with
the value from the BOM.

Task ID: [4395548](https://www.odoo.com/odoo/project/966/tasks/4395548)

--- a/addons/mrp/views/mrp_bom_views.xml
+++ b/addons/mrp/views/mrp_bom_views.xml
@@ -159,6 +159,12 @@
                                                 help="Compute the days required to resupply all components from BoM, by either buying or manufacturing the components and/or subassemblies."
                                                 class="oe_link pt-0"/>
                                     </div>
+                                    <label for="batch_size" invisible="type != 'normal'"/>
+                                    <div class="o_row" invisible="type != 'normal'">
+                                        <field name="enable_batch_size"/>
+                                        <field name="batch_size" class="w-50" invisible="not enable_batch_size" decoration-danger="batch_size &lt;= 0.0"/>
+                                        <field name="product_uom_id" groups="uom.group_uom" readonly="1" invisible="not enable_batch_size"/>
+                                    </div>
                                 </group>
                             </group>
                         </page>
