[IMP] crm, *: allow stages to be shared between teams
also modified: website_crm_partner_assign

Previously, stage-specific teams were locked to one team and one team
only. As a result, "shared" lead stages between different teams were
accessible to every team, causing clutter.

This commit allows lead stages to be shared between teams. All
tasks belonging to a shared stage will be present in the pipeline
of both teams.

task-4684660

Part-of: odoo/odoo#211855
Related: odoo/enterprise#93415
Related: odoo/upgrade#7762
Signed-off-by: Thibault Delavallee (tde) <tde@openerp.com>

--- a/addons/crm/views/crm_lead_views.xml
+++ b/addons/crm/views/crm_lead_views.xml
@@ -17,7 +17,7 @@
                             invisible="won_status != 'pending' or not active"/>
                         <field name="stage_id" widget="rotting_statusbar_duration"
                             options="{'clickable': '1', 'fold_field': 'fold'}"
-                            domain="['|', ('team_id', '=', team_id), ('team_id', '=', False)]"
+                            domain="['|', ('team_ids', 'in', team_id), ('team_ids', '=', False)]"
                             invisible="type == 'lead'" readonly="won_status == 'lost' or not active"/>
                     </header>
                     <sheet>
