--- a/addons/crm/report/crm_opportunity_report_views.xml
+++ b/addons/crm/report/crm_opportunity_report_views.xml
@@ -124,7 +124,7 @@
                     <filter string="Date Closed" name="date_closed_filter" date="date_closed"/>
                     <group>
                         <field name="partner_id" filter_domain="[('partner_id','child_of',self)]"/>
-                        <field name="stage_id" domain="['|', ('team_id', '=', False), ('team_id', '=', 'team_id')]"/>
+                        <field name="stage_id" domain="['|', ('team_ids', '=', False), ('team_ids', 'in', 'team_id')]"/>
                         <field name="campaign_id"/>
                         <field name="medium_id"/>
                         <field name="source_id"/>
