--- a/addons/crm/views/crm_team_member_views.xml
+++ b/addons/crm/views/crm_team_member_views.xml
@@ -27,7 +27,7 @@
             </field>
             <xpath expr="//main" position="after">
                 <div class="o_member_assignment"
-                        invisible="not assignment_enabled or assignment_optout">
+                        invisible="assignment_optout">
                     <field name="lead_month_count" widget="gauge"
                         options="{'max_field': 'assignment_max'}"
                         invisible="assignment_max == 0"/>
@@ -43,20 +43,21 @@
         <field name="arch" type="xml">
             <xpath expr="//sheet" position="inside">
                 <notebook>
-                    <page string="Lead Assignment" name="lead_assign" invisible="not assignment_enabled">
+                    <page string="Lead Assignment" name="lead_assign">
                         <group>
-                            <div invisible="assignment_optout" colspan="2">
+                            <label for="assignment_max" class="o_form_label text-900" string="Capacity" invisible="assignment_optout"/>
+                            <span invisible="assignment_optout">
                                 <field name="lead_month_count" class="oe_inline"/>
                                 <span> leads assigned the last 30 days out of a maximum of </span>
-                                <field name="assignment_max" class="oe_inline o_field_highlight o_input_6ch"/>
-                            </div>
+                                <field name="assignment_max" class="oe_inline o_field_highlight o_input_6ch border-bottom border-dark"/>
+                            </span>
                             <field name="assignment_optout"/>
                             <field name="assignment_domain_preferred" string="Lead Priority Filter" widget="domain"
                                 options="{'model': 'crm.lead', 'foldable': True}"
-                                invisible="assignment_max == 0 or assignment_optout"/>
+                                invisible="not assignment_enabled or assignment_max == 0 or assignment_optout"/>
                             <field name="assignment_domain" string="Lead Assignment Filter" widget="domain"
                                 options="{'model': 'crm.lead', 'foldable': True}"
-                                invisible="assignment_max == 0 or assignment_optout"/>
+                                invisible="not assignment_enabled or assignment_max == 0 or assignment_optout"/>
                         </group>
                     </page>
                 </notebook>
