--- a/addons/sales_team/views/crm_team_member_views.xml
+++ b/addons/sales_team/views/crm_team_member_views.xml
@@ -103,31 +103,31 @@
                         </button>
                     </div>
                     <widget name="web_ribbon" title="Archived" bg_color="text-bg-danger" invisible="active"/>
-                    <field name="image_1920" widget='image' class="oe_avatar"
-                        invisible="not user_id"
-                        options='{"preview_image": "image_128"}'/>
-                    <div class="oe_title">
-                        <label for="user_id" class="oe_edit_only"/>
-                        <h1 class="d-flex">
-                            <field name="user_id" class="flex-grow-1"
-                                options="{'no_quick_create': True}"/>
-                        </h1>
-                        <!-- <div class="o_row" name="crm_team_id">
-                            <label for="crm_team_id"/> -->
-                            <group name="crm_team_id">
-                                <field id="crm_team_id" name="crm_team_id" context="{'kanban_view_ref': 'sales_team.crm_team_view_kanban'}"/>
-                            </group>
-                        <!-- </div> -->
-                    </div>
+                    <field name="image_1920" widget='image' class="float-start pe-3"
+                        invisible="not user_id" nolabel="1"
+                        options='{"preview_image": "image_128", "size": [130,130], "img_class": "rounded border"}'/>
+                    <h1 class="d-flex">
+                        <field name="user_id" class="flex-grow-1" placeholder="e.g. John Doe"
+                            options="{'no_quick_create': True}"/>
+                    </h1>
+                    <group name="crm_team_id">
+                        <field id="crm_team_id" name="crm_team_id" context="{'kanban_view_ref': 'sales_team.crm_team_view_kanban'}"/>
+                    </group>
                     <group name="member_partner_info">
-                        <group>
-                            <field name="email" invisible="not user_id"/>
-                            <field name="company_id" invisible="not user_id"
-                                groups="base.group_multi_company"/>
-                        </group>
-                        <group>
-                            <field name="phone" invisible="not user_id"/>
-                        </group>
+                        <div class="d-flex flex-column flex-grow-1">
+                            <div colspan="2" class="d-flex align-items-baseline" invisible="not user_id">
+                                <i class="fa fa-fw me-1 fa-envelope text-primary" title="Email"/>
+                                <field name="email" nolabel="1"/>
+                            </div>
+                            <div colspan="2" class="d-flex align-items-baseline" invisible="not user_id">
+                                <i class="fa fa-fw me-1 fa-phone text-primary" title="Phone"/>
+                                <field name="phone" nolabel="1"/>
+                            </div>
+                            <div colspan="2" class="d-flex align-items-baseline" invisible="not user_id" groups="base.group_multi_company">
+                                <i class="fa fa-fw me-1 fa-building text-primary" title="Company"/>
+                                <field name="company_id"/>
+                            </div>
+                        </div>
                     </group>
                 </sheet>
                 <chatter/>
@@ -144,7 +144,7 @@
         <field name="arch" type="xml">
             <!-- <xpath expr="//div[@name='crm_team_id']" position="replace"/> -->
             <xpath expr="//group[@name='crm_team_id']" position="replace"/>
-            <xpath expr="//group[@name='member_partner_info']/group" position="attributes">
+            <xpath expr="//group[@name='member_partner_info']/div" position="attributes">
                 <attribute name="class">px-0</attribute>
             </xpath>
         </field>
