[IMP] website*: reorganize settings
This commit enhances the website settings for better clarity and
usability.

Key Improvements:

- Reorganized Website settings by updating the order, repositioning
  sections, and removing options.
- Introduced a unified delivery provider view and removed the individual
  delivery provider settings.
- Updated the label for the Newsletter setting.
- The default social image, previously set in Website settings, is now
  directly moved into the SEO Dialog.
- Changed the header of the website.
- Added Order Confirmation Email Template in Settings, by which we can
  change the default confirmation template directly from here.
- Added the info tooltip.

task-4819667

--- a/addons/sale/wizard/res_config_settings_views.xml
+++ b/addons/sale/wizard/res_config_settings_views.xml
@@ -93,7 +93,7 @@
                                     class="oe_inline"
                                 >
                                     <button
-                                        string="Activate Stripe" class="btn-primary" disabled=""
+                                        string="Activate Stripe" class="btn btn-primary" disabled=""
                                     />
                                 </div>
                                 <button
@@ -101,7 +101,7 @@
                                     type="action"
                                     name='%(payment.action_payment_provider)d'
                                     icon="oi-arrow-right"
-                                    class="btn-link oe_inline"
+                                    class="btn btn-link oe_inline"
                                 />
                             </div>
                             <div
@@ -111,7 +111,7 @@
                                 <button
                                     type="object"
                                     name="action_view_active_provider"
-                                    class="btn-primary col-auto"
+                                    class="btn btn-primary col-auto"
                                 >
                                     Configure
                                     <field
@@ -126,7 +126,7 @@
                                     type="action"
                                     name="%(payment.action_payment_provider)d"
                                     icon="oi-arrow-right"
-                                    class="btn-link col-auto"
+                                    class="btn btn-link col-auto"
                                 />
                             </div>
                         </setting>
