--- a/addons/website_sale_stock/views/product_template_views.xml
+++ b/addons/website_sale_stock/views/product_template_views.xml
@@ -15,7 +15,7 @@
                     <span invisible="not show_availability">
                         <label
                             for="available_threshold"
-                            string="only if below"
+                            string="Below"
                             class="o_light_label me-1"
                         />
                         <field name="available_threshold" class="oe_inline col-1" digits="[42, 0]"/>
