--- a/addons/l10n_ar_website_sale/views/res_config_settings_views.xml
+++ b/addons/l10n_ar_website_sale/views/res_config_settings_views.xml
@@ -4,7 +4,7 @@
     <record id='res_config_settings_view_form' model='ir.ui.view'>
         <field name='name'>res.config.settings.view.form.inherit.website.sale</field>
         <field name='model'>res.config.settings</field>
-        <field name='inherit_id' ref='website.res_config_settings_view_form'/>
+        <field name='inherit_id' ref='website_sale.res_config_settings_view_form'/>
         <field name='arch' type='xml'>
             <setting id='website_tax_inclusion_setting' position='inside'>
                 <div invisible='country_code != "AR" or show_line_subtotals_tax_selection != "tax_included"'>
