--- a/addons/point_of_sale/views/res_config_settings_views.xml
+++ b/addons/point_of_sale/views/res_config_settings_views.xml
@@ -21,7 +21,7 @@
                 <app data-string="Point of sale" string="Point of Sale" name="point_of_sale" groups="point_of_sale.group_pos_manager">
                     <div class="pos_res_config_container">
                     <div class="sticky-top w-100 bg-white">
-                        <setting type="header" string="Point of Sale">
+                        <setting type="header" string="Point of Sale" class="bg-warning">
                             <field name="pos_config_id" options="{'no_open': True, 'no_create': True}" title="Settings on this page will apply to this point of sale."/>
                             <button name="action_pos_config_create_new" type="object" string="+ New Shop" class="btn btn-link"/>
                         </setting>
