--- a/addons/website/views/res_config_settings_views.xml
+++ b/addons/website/views/res_config_settings_views.xml
@@ -20,22 +20,25 @@
         <field name="arch" type="xml">
             <xpath expr="//form" position="inside">
                 <app data-string="Website" string="Website" name="website" groups="website.group_website_designer">
-                    <setting type="header" string="Settings of Website">
+                    <setting
+                        id="website_creation_settings"
+                        class="bg-secondary"
+                        type="header"
+                    >
                         <field name="website_id" options="{'no_open': True, 'no_create': True}" title="Settings on this page will apply to this website"/>
-                        <button name="action_website_create_new" type="object" string="+ New Website" class="btn btn-link"/>
+                        <button
+                            name="action_website_create_new"
+                            type="object"
+                            string="+ New Website"
+                            class="btn btn-secondary mx-2 rounded-2"
+                        />
                     </setting>
-                    <block title="Website Info" id="website_info_settings">
-                        <setting string="Website Identification" help="Set your website's name and favicon, displayed in the browser tab next to the page title.">
-                            <div class="content-group">
-                                <div class="row mt8">
-                                    <label class="col-lg-3" string="Name" for="website_name"/>
-                                    <field name="website_name" required="website_id"/>
-                                </div>
-                                <div class="row mt8">
-                                    <label class="col-lg-3" string="Favicon" for="favicon"/>
-                                    <field name="favicon" widget="image" class="float-start o_avatar bg-view"/>
-                                </div>
-                            </div>
+                    <block title="General" id="website_info_settings">
+                        <setting string="Domain"
+                                 help="Display this website for this web address"
+                                 title="Display this website when users visit this domain"
+                                 documentation="/applications/websites/website/configuration/domain_names.html#domain-name-website-map">
+                            <field name="website_domain" placeholder="https://www.odoo.com"/>
                         </setting>
                         <setting string="Languages"
                                  title="Languages available on your website"
@@ -50,48 +53,27 @@
                                 <button type="action" name="%(base.action_view_base_language_install)d" string="Install new languages" class="btn-link" icon="oi-arrow-right"/>
                             </div>
                         </setting>
-                        <setting string="Domain"
-                                 help="Display this website for this web address"
-                                 title="Display this website when users visit this domain"
-                                 documentation="/applications/websites/website/configuration/domain_names.html#domain-name-website-map">
-                            <field name="website_domain" placeholder="https://www.odoo.com"/>
+                        <setting string="Website Identification" help="Set your website's name and favicon, displayed in the browser tab next to the page title.">
+                            <div class="content-group">
+                                <div class="row mt8">
+                                    <label class="col-lg-3" string="Name" for="website_name"/>
+                                    <field name="website_name" required="website_id"/>
+                                </div>
+                                <div class="row mt8">
+                                    <label class="col-lg-3" string="Favicon" for="favicon"/>
+                                    <field name="favicon" widget="image" class="float-start o_avatar bg-view"/>
+                                </div>
+                            </div>
                         </setting>
                         <setting string="Company" title="The company this website is linked to" groups="base.group_multi_company">
                             <field name="website_company_id" required="website_id"/>
                         </setting>
-                    </block>
-
-                    <block title="Email &amp; Marketing" id="website_email_marketing">
-                        <setting id="livechat" string="Livechat" help="Allows your visitors to chat with you">
-                            <field name="module_website_livechat"/>
-                        </setting>
-                        <setting id="website_marketing_automation" string="Email Marketing" help="Allows to do mass mailing campaigns to contacts">
-                            <field name="module_marketing_automation" widget="upgrade_boolean"/>
-                        </setting>
-                    </block>
-
-                    <block title="Privacy" id="website_settings" invisible="not website_id">
-                        <setting id="website_cookies_bar_setting" help="Display a customizable cookies bar on your website"
-                            documentation="/applications/websites/website/configuration/cookies_bar.html">
-                            <field name="website_cookies_bar"/>
-                            <div class="content-group" invisible="not website_cookies_bar">
-                                <div>
-                                    <field name="website_block_third_party_domains" required="website_cookies_bar"/>
-                                    <label class="o_light_label" string="Block tracking 3rd-party services" for="website_block_third_party_domains"/>
-                                </div>
-                                <div>
-                                    <small class="text-muted">
-                                        Block 3rd-party services that track users (e.g. YouTube, Google Maps, Facebook...) when the user has not given their consent.
-                                    </small>
-                                </div>
-                                <div class="mt4">
-                                    <button type="object" name="action_open_blocked_third_party_domains"
-                                        string="Add domains to the block list" class="btn-link"
-                                        icon="fa-ban" noSaveDialog="true"/>
-                                </div>
-                            </div>
-                        </setting>
-                        <setting id="shared_user_account_setting" groups="website.group_multi_website" help="Accounts are usable across all your multiple websites">
+                        <setting
+                            id="shared_user_account_setting"
+                            help="Accounts are usable across all your multiple websites"
+                            info="This setting is common to all websites."
+                            groups="website.group_multi_website"
+                        >
                             <field name="shared_user_account"/>
                         </setting>
                         <setting id="website_login_documents" title=" To send invitations in B2B mode, open a contact or select several ones in list view and click on 'Portal Access Management' option in the dropdown menu *Action*." help="Let your customers log in to see their documents">
@@ -102,8 +84,48 @@
                                 </div>
                             </div>
                         </setting>
+                        <setting id="livechat" string="Livechat" help="Allows your visitors to chat with you">
+                            <field name="module_website_livechat"/>
+                        </setting>
                     </block>
-                    <block title="SEO - Search Engine Optimization" id="website_settings" invisible="not website_id">
+                    <block title="Tracking &amp; SEO" id="website_settings" invisible="not website_id">
+                        <setting
+                            id="plausible_setting"
+                            help="Simple and privacy-friendly Google Analytics alternative"
+                            documentation="/applications/websites/website/reporting/analytics.html#analytics-plausible"
+                        >
+                            <field name="has_plausible_shared_key"/>
+                            <div class="content-group" invisible="not has_plausible_shared_key">
+                                <div class="row mt16">
+                                    <label class="col-lg-3 o_light_label" string="Shared Link Auth" for="plausible_shared_key"/>
+                                    <field name="plausible_shared_key"
+                                        required="has_plausible_shared_key"/>
+                                </div>
+                                <div class="row mt16">
+                                    <label class="col-lg-3 o_light_label" string="Site" for="plausible_site"/>
+                                    <field name="plausible_site"
+                                        required="has_plausible_shared_key"/>
+                                </div>
+                            </div>
+                            <div invisible="not has_plausible_shared_key">
+                                <button
+                                    type="action"
+                                    name="%(website.backend_dashboard)d"
+                                    string=" See Analytics Report"
+                                    class="btn-link fw-normal border-0"
+                                    icon="oi-arrow-right d-inline me-auto"
+                                />
+                            </div>
+                            <div invisible="not has_plausible_shared_key">
+                                <widget
+                                    class="oe_link"
+                                    name="documentation_link"
+                                    path="/applications/websites/website/reporting/analytics.html#analytics-plausible"
+                                    label=" How to create my Plausible Shared Link"
+                                    icon="oi oi-arrow-right"
+                                />
+                            </div>
+                        </setting>
                         <setting
                             id="google_analytics_setting"
                             help="Track visits using Google Analytics or Google Tag Manager"
@@ -150,18 +172,27 @@
                                 </div>
                             </div>
                         </setting>
-                        <setting id="robots_setting" string="Robots.txt" help="Robots.txt: This file tells to search engine crawlers which pages or files they can or can't request from your site.">
+                        <setting
+                            id="robots_setting"
+                            string="Robots.txt"
+                            help="Robots.txt: This file tells to search engine crawlers which pages or files they can or can't request from your site."
+                            groups="base.group_no_one"
+                        >
                             <div class="mt4">
                                 <button type="object" name="action_open_robots" string="Edit robots.txt" class="btn-link" icon="fa-android" noSaveDialog="true"/>
                             </div>
                         </setting>
-                        <setting id="social_default_image_setting" string="Default Social Share Image" help="If set, replaces the website logo as the default social share image.">
+                        <setting
+                            id="social_default_image_setting"
+                            string="Default Social Share Image"
+                            help="If set, replaces the website logo as the default social share image."
+                        >
                             <field name="has_default_share_image"/>
                             <field name="social_default_image" widget="image" class="w-25 mt-2" invisible="not has_default_share_image"/>
                         </setting>
                         <setting
                             id="google_console_setting"
-                            help="Ensure your website is indexed by Google and monitor Google Search results data"
+                            help="Monitor Google Search results data"
                             documentation="/applications/websites/website/configuration/google_search_console.html"
                         >
                             <field name="has_google_search_console"/>
@@ -183,40 +214,26 @@
                             </div>
                         </setting>
                         <setting
-                            id="plausbile_setting"
-                            help="Use Plausible.io, Simple and privacy-friendly Google Analytics alternative"
-                            documentation="/applications/websites/website/reporting/analytics.html#analytics-plausible"
+                            id="website_cookies_bar_setting"
+                            help="Display a customizable cookies bar on your website"
+                            documentation="/applications/websites/website/configuration/cookies_bar.html"
                         >
-                            <field name="has_plausible_shared_key"/>
-                            <div class="content-group" invisible="not has_plausible_shared_key">
-                                <div class="row mt16">
-                                    <label class="col-lg-3 o_light_label" string="Shared Link Auth" for="plausible_shared_key"/>
-                                    <field name="plausible_shared_key"
-                                        required="has_plausible_shared_key"/>
+                            <field name="website_cookies_bar"/>
+                            <div class="content-group" invisible="not website_cookies_bar">
+                                <div>
+                                    <field name="website_block_third_party_domains" required="website_cookies_bar"/>
+                                    <label class="o_light_label" string="Block tracking 3rd-party services" for="website_block_third_party_domains"/>
                                 </div>
-                                <div class="row mt16">
-                                    <label class="col-lg-3 o_light_label" string="Site" for="plausible_site"/>
-                                    <field name="plausible_site"
-                                        required="has_plausible_shared_key"/>
+                                <div>
+                                    <small class="text-muted">
+                                        Block 3rd-party services that track users (e.g. YouTube, Google Maps, Facebook...) when the user has not given their consent.
+                                    </small>
                                 </div>
-                            </div>
-                            <div invisible="not has_plausible_shared_key">
-                                <button
-                                    type="action"
-                                    name="%(website.backend_dashboard)d"
-                                    string=" See Analytics Report"
-                                    class="btn-link fw-normal border-0"
-                                    icon="oi-arrow-right d-inline me-auto"
-                                />
-                            </div>
-                            <div invisible="not has_plausible_shared_key">
-                                <widget
-                                    class="oe_link"
-                                    name="documentation_link"
-                                    path="/applications/websites/website/reporting/analytics.html#analytics-plausible"
-                                    label=" How to create my Plausible Shared Link"
-                                    icon="oi oi-arrow-right"
-                                />
+                                <div class="mt4">
+                                    <button type="object" name="action_open_blocked_third_party_domains"
+                                        string="Add domains to the block list" class="btn-link"
+                                        icon="fa-ban" noSaveDialog="true"/>
+                                </div>
                             </div>
                         </setting>
                     </block>
