--- a/addons/website_payment/views/res_config_settings_views.xml
+++ b/addons/website_payment/views/res_config_settings_views.xml
@@ -6,21 +6,90 @@
         <field name="priority" eval="20"/>
         <field name="inherit_id" ref="website.res_config_settings_view_form"/>
         <field name="arch" type="xml">
+            <setting id="website_creation_settings" position="after">
+                <setting
+                    id="website_payment_settings"
+                    type="header"
+                    invisible="has_enabled_provider"
+                    class="bg-warning"
+                >
+                    <div class="row d-flex align-items-baseline" invisible="active_provider_id">
+                        <span class="oe_inline pe-0">
+                            Enable a payment provider to accept online payments.
+                        </span>
+                        <div
+                            invisible="not onboarding_payment_module"
+                            class="d-flex align-self-baseline oe_inline px-0"
+                        >
+                            <button
+                                type="object"
+                                name="action_w_payment_start_payment_onboarding"
+                                class="btn btn-link px-1"
+                            >
+                                Activate
+                                <field name="onboarding_payment_module" nolabel="1"/>
+                            </button>
+                        </div>
+                        <div
+                            title="Stripe Connect is not available in your country, please use another payment provider."
+                            invisible="onboarding_payment_module"
+                            class="d-flex align-self-baseline oe_inline px-0"
+                        >
+                            <button
+                                string="Activate Stripe"
+                                class="btn btn-link px-1"
+                                disabled=""
+                            />
+                        </div>
+                        <span class="oe_inline px-0">or</span>
+                        <button
+                            string="Find another provider"
+                            type="action"
+                            name="%(payment.action_payment_provider)d"
+                            class="btn btn-link oe_inline px-1"
+                        />
+                    </div>
+                    <div class="d-flex align-items-baseline" invisible="not active_provider_id">
+                        <span>Enable a payment provider to accept online payments.</span>
+                        <button
+                            type="object"
+                            name="action_view_active_provider"
+                            class="btn btn-link px-1"
+                        >
+                            Configure
+                            <field
+                                name="active_provider_id"
+                                nolabel="1"
+                                options="{'no_open': True}"
+                            />
+                        </button>
+                        <span>or</span>
+                        <button
+                            string="Find another provider"
+                            type="action"
+                            name="%(payment.action_payment_provider)d"
+                            class="btn btn-link px-1"
+                        />
+                    </div>
+                </setting>
+            </setting>
             <block id="website_info_settings" position="after">
-                <block title="Shop - Payment" id="div_website_payment">
+                <block title="Payments" id="website_payment_block">
                     <setting
-                        id="website_payment"
-                        string="Activate Payments"
-                        help="Support most payment methods; Visa, Mastercard, Maestro, Google Pay, Apple Pay, etc. as well as recurring charges."
+                        string="Configure Payment Methods"
+                        id="website_payment_setting"
+                        help="Visa, Mastercard, Maestro, Google Pay, Apple Pay, etc. as well as recurring charges."
                         documentation="/applications/finance/payment_providers.html"
                     >
                         <div class="content-group">
                             <div class="row" invisible="active_provider_id">
-                                <div invisible="not onboarding_payment_module" class="oe_inline">
+                                <div
+                                    invisible="not onboarding_payment_module" class="oe_inline pe-0"
+                                >
                                     <button
                                         type="object"
                                         name="action_w_payment_start_payment_onboarding"
-                                        class="btn-primary"
+                                        class="btn btn-primary"
                                     >
                                         Activate
                                         <field
@@ -33,40 +102,40 @@
                                 <div
                                     title="Stripe Connect is not available in your country, please use another payment provider."
                                     invisible="onboarding_payment_module"
-                                    class="oe_inline"
+                                    class="oe_inline pe-0"
                                 >
                                     <button
-                                        string="Activate Stripe" class="btn-primary" disabled=""
+                                        string="Activate Stripe" class="btn btn-primary" disabled=""
                                     />
                                 </div>
                                 <button
-                                    string="View Alternatives"
+                                    string="Find a Payment Provider"
                                     type="action"
                                     name="%(payment.action_payment_provider)d"
+                                    class="btn btn-link oe_inline"
                                     icon="oi-arrow-right"
-                                    class="btn-link oe_inline"
                                 />
                             </div>
                             <div invisible="not active_provider_id">
                                 <button
                                     type="object"
                                     name="action_view_active_provider"
-                                    class="btn-primary col-auto"
+                                    class="btn btn-primary"
                                 >
                                     Configure
                                     <field
                                         name="active_provider_id"
-                                        class="oe_inline"
-                                        nolabel="1"
                                         options="{'no_open': True}"
+                                        nolabel="1"
+                                        class="oe_inline"
                                     />
                                 </button>
                                 <button
-                                    string="View Other Providers "
+                                    string="Find a Payment Provider"
                                     type="action"
                                     name="%(payment.action_payment_provider)d"
+                                    class="btn btn-link"
                                     icon="oi-arrow-right"
-                                    class="btn-link col-auto"
                                 />
                             </div>
                         </div>
