--- a/addons/website_sale_autocomplete/views/res_config_settings_views.xml
+++ b/addons/website_sale_autocomplete/views/res_config_settings_views.xml
@@ -4,7 +4,7 @@
     <record id="res_config_settings_view_form_inherit_autocomplete_googleplaces" model="ir.ui.view">
         <field name="name">res.config.settings.view.form.inherit.autocomplete.googleplaces</field>
         <field name="model">res.config.settings</field>
-        <field name="inherit_id" ref="website.res_config_settings_view_form"/>
+        <field name="inherit_id" ref="website_sale.res_config_settings_view_form"/>
         <field name="arch" type="xml">
             <xpath expr="//setting[@id='autocomplete_googleplaces_setting']" position="inside">
                 <div>
