--- a/addons/website_sale_loyalty/wizard/res_config_settings_views.xml
+++ b/addons/website_sale_loyalty/wizard/res_config_settings_views.xml
@@ -6,7 +6,7 @@
         <field name="model">res.config.settings</field>
         <field name="inherit_id" ref="website_sale.res_config_settings_view_form"/>
         <field name="arch" type="xml">
-            <setting id="promotion_coupon_programs" position="inside">
+            <setting id="wsale_loyalty_setting" position="inside">
                 <div class="content-group">
                     <div class="mt8" invisible="not module_loyalty">
                         <button name="%(loyalty.loyalty_program_discount_loyalty_action)d"
