--- a/addons/website_sale_mass_mailing/views/res_config_settings_views.xml
+++ b/addons/website_sale_mass_mailing/views/res_config_settings_views.xml
@@ -6,7 +6,7 @@
         <field name="model">res.config.settings</field>
         <field name="inherit_id" ref="website_sale.res_config_settings_view_form"/>
         <field name="arch" type="xml">
-            <setting id="website_checkout_registration" position="after">
+            <setting id="abandoned_carts_setting" position="after">
                 <setting
                     id="newsletter_address"
                     string="Newsletter"
