--- a/addons/website_slides/views/res_config_settings_views.xml
+++ b/addons/website_slides/views/res_config_settings_views.xml
@@ -5,26 +5,6 @@
         <field name="model">res.config.settings</field>
         <field name="inherit_id" ref="website.res_config_settings_view_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//setting[@id='website_marketing_automation']" position="after">
-                <setting id="slides_install_setting" groups="website_slides.group_website_slides_manager">
-                    <span class="o_form_label">Slides</span>
-                    <span class="fa fa-lg fa-globe" title="Values set here are website-specific." groups="website.group_multi_website"/>
-                    <div class="text-muted">
-                        Google Drive API Key
-                    </div>
-                    <div class="content-group">
-                        <div class="row mt16">
-                            <label for="website_slide_google_app_key" class="col-lg-3 o_light_label" string="API Key"/>
-                            <field name="website_slide_google_app_key" class="oe_inline"/>
-                        </div>
-                        <div class="oe_link">
-                            <a href="https://console.developers.google.com/flows/enableapi?apiid=drive,youtube"><span class="oi oi-arrow-right"/>
-                                Create a Google Project and Get a Key
-                            </a>
-                        </div>
-                    </div>
-                </setting>
-            </xpath>
             <xpath expr="//form" position="inside">
                 <app data-string="eLearning" string="eLearning" name="website_slides" groups="website_slides.group_website_slides_manager">
                     <block title="eLearning" id="website_slides_selection_settings">
@@ -39,6 +19,19 @@
                         </setting>
                         <setting id="website_slide_install_website_slides_forum" colspan="4" help="Create a community and let Attendees answer each others' questions.">
                             <field name="module_website_slides_forum"/>
+                        </setting>
+                        <setting id="slides_install_setting" string="Slides" groups="website_slides.group_website_slides_manager" help="Google Drive API Key">
+                            <div class="content-group">
+                                <div class="row mt16">
+                                    <label for="website_slide_google_app_key" class="col-lg-3 o_light_label" string="API Key"/>
+                                    <field name="website_slide_google_app_key" class="oe_inline"/>
+                                </div>
+                                <div class="oe_link">
+                                    <a href="https://console.developers.google.com/flows/enableapi?apiid=drive,youtube"><span class="oi oi-arrow-right"/>
+                                        Create a Google Project and Get a Key
+                                    </a>
+                                </div>
+                            </div>
                         </setting>
                     </block>
                 </app>
