[IMP] product,website_sale: add "image" display type to attributes
When users add an attribute with display type "color", they can upload
images for the different attribute values.
This commit adds a new "image" display type for attributes that is more
suitable for displaying the attribute values as images.
Using this display type will allow uploading images for attribute values
without having to specify a color.
Attributes with this display type will be displayed more clearly in
shop and product pages compared to "color" display type attributes with
uploaded images.

task-4747409

closes odoo/odoo#212998

Signed-off-by: Valentin Chevalier <vcr@odoo.com>

--- a/addons/website_sale/views/templates.xml
+++ b/addons/website_sale/views/templates.xml
@@ -409,6 +409,20 @@
                             t-att-title="ptav.name"
                         />
                     </div>
+                    <div
+                        t-elif="ptav.display_type == 'image'"
+                        class="d-flex"
+                    >
+                        <div
+                            t-attf-class="css_attribute_image size_small cursor-pointer d-block rounded bg-body #{'custom_value' if ptav.is_custom else ''} #{'transparent' if (not ptav.is_custom and not ptav.html_color) else ''}"
+                            t-att-title="ptav.name"
+                        >
+                            <div
+                                class="o_bg_img_center w-100 h-100 rounded-1"
+                                t-att-style="'background-image:url(/web/image/product.attribute.value/%s/image);' % ptav.product_attribute_value_id.id"
+                            />
+                        </div>
+                    </div>
                     <span
                         t-else=""
                         t-attf-class="{{'' if ppr == 2 and layout_mode != 'list' else 'btn-sm'}} btn bg-body w-100 text-body text-truncate"
@@ -949,6 +963,27 @@
         </t>
     </template>
 
+    <template id="website_sale.filter_image_attributes" name="Image attributes in Filter">
+        <t t-foreach="a.value_ids" t-as="v">
+            <label
+                t-attf-class="css_attribute_image size_small position-relative rounded-3 bg-body text-center cursor-pointer #{'active' if v.id in attrib_set else ''} #{'custom_value' if v.is_custom else ''} #{'transparent' if (not v.is_custom and not v.html_color) else ''}"
+            >
+                <input
+                    type="checkbox"
+                    name="attribute_value"
+                    t-att-value="'%s-%s' % (a.id, v.id)"
+                    t-att-checked="'checked' if v.id in attrib_set else None"
+                    t-att-title="v.name"
+                    class="w-100 h-100 opacity-0 cursor-pointer"
+                />
+                <div
+                    class="oe_img_bg o_bg_img_center position-absolute top-0 w-100 h-100 rounded-1"
+                    t-att-style="'background-image:url(/web/image/product.attribute.value/%s/image); background-size:cover;' % v.id if v.image else ''"
+                />
+            </label>
+        </t>
+    </template>
+
     <template id="website_sale.filter_select_attributes" name="Select attributes in Filter">
         <select class="form-select css_attribute_select" name="attribute_value">
             <option value="" selected="true">All <t t-out="a.name"/></option>
@@ -1152,6 +1187,12 @@
                                     t-attf-class="{{'pt-1 pb-3' if isMobile else 'mb-3'}}"
                                 >
                                     <t t-call="website_sale.filter_color_attributes"/>
+                                </div>
+                                <div
+                                    t-elif="a.display_type == 'image'"
+                                    t-attf-class="d-flex flex-wrap gap-2 #{'pt-1 pb-3' if isMobile else 'mb-3'}"
+                                >
+                                    <t t-call="website_sale.filter_image_attributes"/>
                                 </div>
                                 <div
                                     t-elif="a.display_type in ('radio', 'multi')"
