[IMP] stock,mrp_subcontracting: UI Improvements in Location Tree View
With this commit:
-----------------------------------------------
as location is messy with a lot of confusing options:
- Optional hide the `Is Empty` field.
- Remove `Location` term from the `Subcontracting Location`,
 `Physical Locations`, and `Virtual Locations` as it was redundant.

Task ID: [4728397](https://www.odoo.com/odoo/project/966/tasks/4728397)

Part-of: odoo/odoo#215517
Related: odoo/enterprise#88319
Related: odoo/upgrade#7991
Signed-off-by: Arnold Moyaux (arm) <arm@odoo.com>

--- a/addons/stock/views/stock_location_views.xml
+++ b/addons/stock/views/stock_location_views.xml
@@ -105,7 +105,7 @@
                 <field name="active" column_invisible="True"/>
                 <field name="complete_name" string="Location"/>
                 <field name="usage"/>
-                <field name="is_empty" invisible="usage not in ['internal', 'transit']"/>
+                <field name="is_empty" optional="hide" invisible="usage not in ['internal', 'transit']"/>
                 <field name="storage_category_id" readonly="usage != 'internal'" groups="stock.group_stock_multi_locations"/>
                 <field name="company_id" groups="base.group_multi_company"/>
             </list>
