[IMP] stock_fleet, stock: UI Improvements for dock location
Some dock locations are used for only delivery purpose, some used for
only reciept purpose. so we are making it operation type specific.
so user can set the dock locations from the operation type form view
and use this locations while creating batch.

With this commit:
-----------------------------------------------
- When `Dispatch Management` and `Storage Locations` are enabled, users can
  select dock locations by `To field` from the `Operation Type form view`.
- In the `picking batch form view`, only the selected dock locations and their
  child locations (defined in the operation type) are shown in the dropdown.
- `WH/Output` is set as the default dock location for `Delivery operation type`.
  as we commonly used this location for delivery.
- Formatted display name for locations in `M2M` and `M2O` fields as
  `parent location (muted) / current location (bold)` which helps users
  to easily identify the location within its hierarchy.

as there are no fixed dock locations now.
- Removed the `Is a Dock Location` field from the location form/tree view.
- Removed the demo data for the dock locations (Dock A and Dock B)

Task ID: [4728397](https://www.odoo.com/odoo/project/966/tasks/4728397)

--- a/addons/stock_fleet/views/stock_picking_batch.xml
+++ b/addons/stock_fleet/views/stock_picking_batch.xml
@@ -28,7 +28,7 @@
         <field name="arch" type="xml">
             <xpath expr="//group[@id='batch_delivery_data']" position="after">
                 <group invisible="not has_dispatch_management">
-                    <field name="dock_id" groups="stock.group_stock_multi_locations"/>
+                    <field name="dock_id" invisible="not allowed_dock_ids" groups="stock.group_stock_multi_locations" options="{'no_create': True, 'no_open': True}"/>
                     <field name="vehicle_id" placeholder="Third Party Provider"/>
                     <field name="vehicle_category_id" placeholder="semi-truck"/>
                     <label for='used_weight_percentage' string="Weight" invisible="not vehicle_category_id or not vehicle_weight_capacity"/>
