--- a/addons/stock_fleet/views/stock_location.xml
+++ b/addons/stock_fleet/views/stock_location.xml
@@ -5,19 +5,8 @@
         <field name="model">stock.location</field>
         <field name="inherit_id" ref="stock.view_location_form"/>
         <field name="arch" type="xml">
-            <field name="scrap_location" position="after">
-                <field name="is_a_dock" invisible="usage not in ('view', 'internal')"/>
-            </field>
-        </field>
-    </record>
-
-    <record id="stock_location_tree_stock_fleet" model="ir.ui.view">
-        <field name="name">stock.location.list.inherit.stock.transport</field>
-        <field name="model">stock.location</field>
-        <field name="inherit_id" ref="stock.view_location_tree2"/>
-        <field name="arch" type="xml">
-            <field name="is_empty" position="after">
-                <field name="is_a_dock"/>
+            <field name="usage" position="attributes">
+                <attribute name="readonly">context.get('for_dock_location', False)</attribute>
             </field>
         </field>
     </record>
