--- a/addons/stock_fleet/views/stock_picking_type.xml
+++ b/addons/stock_fleet/views/stock_picking_type.xml
@@ -45,7 +45,14 @@
         <field name="inherit_id" ref="stock.view_picking_type_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='auto_batch']" position="before">
-                <field name="dispatch_management"/>
+                <label for="dispatch_management"/>
+                <div class="o_row gap-3">
+                    <field name="dispatch_management"/>
+                    <div class="d-flex gap-3" invisible="not dispatch_management" groups="stock.group_stock_multi_locations">
+                        <span class="fw-bold">To</span>
+                        <field name="dock_ids" placeholder="Dock Locations" widget="many2many_tags" context="{'for_dock_location': True}"/>
+                    </div>
+                </div>
             </xpath>
         </field>
     </record>
