[IMP] stock: display barcode preview on location form view
Change the structure of header in location form view by adding a `<div>`,
so that the barcode img can be placed on the right side of it.

Task ID: [4728397](https://www.odoo.com/odoo/project/966/tasks/4728397)

Part-of: odoo/odoo#215517
Related: odoo/enterprise#88319
Related: odoo/upgrade#7991
Signed-off-by: Arnold Moyaux (arm) <arm@odoo.com>

--- a/addons/stock/views/stock_location_views.xml
+++ b/addons/stock/views/stock_location_views.xml
@@ -25,10 +25,14 @@
                                 type="action" name="stock.act_product_location_open"/>
                     </div>
                     <widget name="web_ribbon" title="Archived" bg_color="text-bg-danger" invisible="active"/>
-                    <label for="name"/>
-                    <h1><field name="name" placeholder="e.g. Shelf 1"/></h1>
-                    <label for="location_id"/>
-                    <h2><field name="location_id" placeholder="e.g. Aisle 1" options="{'no_create': True}"/></h2>
+                    <div class="oe_location_header">
+                        <div>
+                            <label for="name"/>
+                            <h1><field name="name" placeholder="e.g. Shelf 1"/></h1>
+                            <label for="location_id"/>
+                            <h2><field name="location_id" placeholder="e.g. Aisle 1" options="{'no_create': True}"/></h2>
+                        </div>
+                    </div>
 
                     <group>
                         <group string="Additional Information" name="additional_info">
