[IMP] mail: allow to configure OOO on user
User now have a quick way to setup an Out of Office timerange and
message. OOO is considered as activate once a from is set, and
when to is not set or in the future. To is not mandatory as users
could simply deactivate it when coming back.

This is currently not linked to leave-related applications like
holidays, planning, payroll, ... as purpose of this feature is to
allow user to manually setup an OOO when necessary.

Task-4853056

--- a/addons/mail/views/res_users_views.xml
+++ b/addons/mail/views/res_users_views.xml
@@ -38,6 +38,12 @@
                     <field name="signature" position="attributes">
                         <attribute name="widget">html_mail</attribute>
                     </field>
+                    <field name="signature" position="after">
+                        <field name="out_of_office_from" widget="daterange"
+                               options="{'end_date_field': 'out_of_office_to'}"/>
+                        <field name="out_of_office_to" invisible="1"/>  <!-- otherwise it is visible, smort -->
+                        <field name="out_of_office_message"/>
+                    </field>
                 </data>
             </field>
         </record>
@@ -64,6 +70,12 @@
                     </xpath>
                     <field name="signature" position="attributes">
                         <attribute name="widget">html_mail</attribute>
+                    </field>
+                    <field name="signature" position="after">
+                        <field name="out_of_office_from" widget="daterange"
+                               options="{'end_date_field': 'out_of_office_to'}"/>
+                        <field name="out_of_office_to" invisible="1"/>  <!-- otherwise it is visible, smort -->
+                        <field name="out_of_office_message"/>
                     </field>
                 </data>
             </field>
