--- a/odoo/addons/base/views/res_users_views.xml
+++ b/odoo/addons/base/views/res_users_views.xml
@@ -181,7 +181,9 @@
                                     </group>
                                 </group>
                                 <group name="messaging">
-                                    <field name="signature" options="{'codeview': true}"/>
+                                    <group string="Discuss" name="discuss">
+                                        <field name="signature" options="{'codeview': true}"/>
+                                    </group>
                                 </group>
                             </page>
                             <page string="Account Security" name="account_security" invisible="not id"/>
