--- a/addons/stock/wizard/stock_inventory_adjustment_name.xml
+++ b/addons/stock/wizard/stock_inventory_adjustment_name.xml
@@ -9,6 +9,7 @@
                 <div>
                     <group>
                         <field name="inventory_adjustment_name"/>
+                        <field name="counting_date" widget="datetime" placeholder="Today"/>
                     </group>
                 </div>
                 <footer>
