--- a/addons/stock/views/stock_quant_views.xml
+++ b/addons/stock/views/stock_quant_views.xml
@@ -31,22 +31,19 @@
                 <field name="owner_id" groups="stock.group_tracking_owner"/>
                 <field name="lot_properties"/>
                 <group>
+                    <filter name="my_count" string="My Counts" domain="[('user_id', '=', uid)]"/>
+                    <separator/>
                     <filter name='internal_loc' string="Internal Locations" domain="[('location_id.usage','=', 'internal')]"/>
                     <filter name='transit_loc' string="Transit Locations" domain="[('location_id.usage' ,'=', 'transit')]"/>
                     <separator/>
-                    <filter name="on_hand" string="On Hand" domain="[('on_hand', '=', True)]"/>
                     <filter name="to_count" string="To Count" domain="[('inventory_date', '&lt;=', 'today')]"/>
                     <filter name="to_apply" string="To Apply" domain="[('inventory_quantity_set', '=', True)]"/>
-                    <filter name="priority_products" string="Starred Products" domain="[('is_favorite', '=', True)]"/>
                     <separator/>
-                    <filter name="in_stock" string="In Stock" domain="[('quantity', '&gt;', 0.0)]"/>
                     <filter name="conflicts" string="Conflicts" domain="[('is_outdated', '=', True)]"/>
+                    <separator/>
                     <filter name="negative" string="Negative Stock" domain="[('quantity', '&lt;', 0.0)]"/>
-                    <filter name="reserved" string="Reservations" domain="[('reserved_quantity', '&gt;', 0.0)]"/>
                     <separator/>
                     <filter name="filter_in_date" date="in_date"/>
-                    <separator/>
-                    <filter name="my_count" string="My Counts" domain="[('user_id', '=', uid)]"/>
                 </group>
                 <group>
                     <filter string='Product' name="productgroup" context="{'group_by': 'product_id'}"/>
@@ -142,7 +139,7 @@
                 <field name="owner_id" groups="stock.group_tracking_owner"
                        readonly="id"
                        options="{'no_create': True}"/>
-                <field name="inventory_quantity_auto_apply" string="On Hand Quantity" readonly="0" sum="Total On Hand"/>
+                <field name="inventory_quantity_auto_apply" readonly="0" sum="Total On Hand"/>
                 <field name="reserved_quantity" optional="show" sum="Total Reserved"/>
                 <field name="available_quantity" optional="hide" sum="Total Available"/>
                 <field name="product_uom_id" groups="uom.group_uom" widget="many2one_uom"/>
@@ -244,20 +241,6 @@ No Stock On Hand. This analysis gives you an overview of the current stock level
         </field>
     </record>
 
-    <record id="duplicated_sn_warning" model="ir.ui.view">
-        <field name="name">stock.quant.duplicated.sn.warning</field>
-        <field name="priority">1000</field>
-        <field name="model">stock.quant</field>
-        <field name="arch" type="xml">
-            <form string="Duplicated SN Warning">
-                This SN is already in another location.
-                <footer>
-                    <button string="Close" class="btn btn-primary" special="cancel"/>
-                </footer>
-            </form>
-        </field>
-    </record>
-
     <record id="view_stock_quant_form" model="ir.ui.view">
         <field name="name">view.stock.quant.form</field>
         <field name="priority">100</field>
@@ -292,17 +275,16 @@ in this location. That leads to a negative stock.
         <field name="model">stock.quant</field>
         <field eval="10" name="priority"/>
         <field name="arch" type="xml">
-            <list default_order="location_id, inventory_date, product_id, package_id, lot_id, owner_id" decoration-warning='is_outdated' editable="bottom" create="1" edit="1" import="1" js_class="inventory_report_list" sample="1">
+            <list default_order="location_id, inventory_date, product_id, package_id, lot_id, owner_id" decoration-warning='is_outdated' multi_edit="1" editable="bottom" create="1" edit="1" import="1" js_class="inventory_report_list" sample="1">
                 <header>
                     <button name="action_apply_all" string="Apply All" type="object"
-                            class="btn btn-secondary"
+                            class="btn btn-primary"
                             invisible="not context.get('inventory_mode') or context.get('inventory_report_mode')"
                             display="always"
                         />
                     <button name="stock.action_stock_inventory_adjustement_name" type="action" string="Apply"/>
                     <button name="action_reset" type="object" string="Clear" groups="stock.group_stock_manager"/>
                     <button name="stock.action_stock_request_count" groups="stock.group_stock_manager" type="action" string="Request a Count"/>
-                    <button name="action_stock_quant_relocate" string="Relocate" type="object" groups="stock.group_stock_manager" invisible="context.get('hide_location', False)" context="{'action_ref': 'stock.action_view_inventory_tree'}"/>
                 </header>
                 <field name="create_date" column_invisible="True"/>
                 <field name="write_date" column_invisible="True"/>
@@ -313,33 +295,28 @@ in this location. That leads to a negative stock.
                 <field name="inventory_quantity_set" column_invisible="True"/>
                 <field name="company_id" column_invisible="True"/>
                 <field name="location_id" domain="[('usage', 'in', ['internal', 'transit'])]" column_invisible="context.get('hide_location', False)" readonly="id" options="{'no_create': True}"/>
-                <field name="storage_category_id" groups="stock.group_stock_multi_locations" column_invisible="context.get('hide_location', False)" options="{'no_create': True}" optional="hidden"/>
                 <field name="cyclic_inventory_frequency" column_invisible="context.get('hide_location', False)" options="{'no_create': True}" optional="hidden"/>
-                <field name="is_favorite" widget="boolean_favorite" nolabel="1" optional="hidden"/>
                 <field name="product_id" readonly="context.get('single_product', False) or id" force_save="1" options="{'no_create': True}"/>
                 <field name="product_categ_id" optional="hide"/>
-                <button name="action_warning_duplicated_sn" type="object" invisible="not sn_duplicated" title="This lot/serial number is already in another location" class="btn btn-secondary text-warning float-end" icon="fa-warning"/>
                 <field name="lot_id" groups="stock.group_production_lot"
                     column_invisible="context.get('hide_lot', False)"
                     readonly="tracking not in ['serial', 'lot'] or (id and (lot_id or quantity != 0))"
                     context="{'default_product_id': product_id}"
-                    decoration-warning="sn_duplicated"
+                    decoration-danger="sn_duplicated"
                     force_save="1"/>
                 <field name="package_id" groups="stock.group_tracking_lot" widget="package_m2o" context="{'show_src_package': 1}" readonly="id"/>
                 <field name="owner_id" groups="stock.group_tracking_owner" readonly="id" options="{'no_create': True}"/>
                 <field name="last_count_date" optional='hidden' readonly='1'/>
-                <field name="available_quantity" string="Available Quantity" decoration-danger="available_quantity &lt; 0" optional="hidden"/>
-                <field name="quantity" optional="show" decoration-warning="quantity &lt; 0" string="On Hand Quantity"/>
-                <field name="product_uom_id" groups="uom.group_uom"/>
+                <field name="inventory_date" decoration-info="inventory_date &lt;= context_today().strftime('%Y-%m-%d')" decoration-bf="inventory_date &lt;= context_today().strftime('%Y-%m-%d')" optional="show"/>
+                <field name="user_id" string="User" optional="show"/>
+                <field name="quantity" optional="show" decoration-warning="quantity &lt; 0" string="On Hand"/>
                 <field name="inventory_quantity" widget="counted_quantity_widget"/>
                 <field name="inventory_diff_quantity" string="Difference"  invisible="not inventory_quantity_set" decoration-muted="inventory_diff_quantity == 0" decoration-danger="inventory_diff_quantity &lt; 0" decoration-success="inventory_diff_quantity &gt; 0" decoration-bf="inventory_diff_quantity != 0"/>
-                <field name="inventory_date" optional="show"/>
-                <field name="user_id" string="User" optional="show"/>
+                <field name="product_uom_id" groups="uom.group_uom"/>
                 <field name='company_id' groups="base.group_multi_company" optional="hide"/>
                 <field name="lot_properties" optional="hide"/>
                 <button name="action_inventory_history" type="object" class="btn btn-link text-info" icon="fa-history" string="History"/>
                 <button name="action_apply_inventory" type="object" string="Apply" class="btn btn-link" icon="fa-save" invisible="not inventory_quantity_set"/>
-                <button name="action_set_inventory_quantity" type="object" string="Set" class="btn btn-link" icon="fa-bullseye" invisible="inventory_quantity_set"/>
                 <button name="action_clear_inventory_quantity" type="object" string="Clear" class="btn text-warning" icon="fa-times" invisible="not inventory_quantity_set"/>
             </list>
         </field>
@@ -366,6 +343,18 @@ in this location. That leads to a negative stock.
         <field name="group_ids" eval="[(4, ref('stock.group_stock_manager'))]"/>
         <field name="code">
             action = records.action_set_inventory_quantity_zero()
+        </field>
+    </record>
+
+    <record model="ir.actions.server" id="action_stock_quant_relocate">
+        <field name="name">Relocate</field>
+        <field name="model_id" ref="model_stock_quant"/>
+        <field name="binding_model_id" ref="stock.model_stock_quant"/>
+        <field name="binding_view_types">list,kanban</field>
+        <field name="state">code</field>
+        <field name="group_ids" eval="[(4, ref('stock.group_stock_manager'))]"/>
+        <field name="code">
+            action = records.with_context(action_ref='stock.action_view_inventory_tree').action_stock_quant_relocate()
         </field>
     </record>
 
