--- a/addons/stock/wizard/stock_request_count.xml
+++ b/addons/stock/wizard/stock_request_count.xml
@@ -8,9 +8,9 @@
             <form>
                 <group>
                     <field name="quant_ids" invisible="1"/>
+                    <field name="user_id" placeholder="Anyone"/>
                     <field name="inventory_date"/>
-                    <field name="user_id"/>
-                    <field name="set_count" widget='radio'/>
+                    <field name="show_expected_quantity"/>
                 </group>
                 <footer>
                     <button name="action_request_count" string="Confirm" type="object" class="btn-primary" data-hotkey="q"/>
@@ -21,7 +21,7 @@
     </record>
 
     <record id="action_stock_request_count" model="ir.actions.act_window">
-        <field name="name">Request a Count</field>
+        <field name="name">Inventory Request</field>
         <field name="res_model">stock.request.count</field>
         <field name="view_mode">form</field>
         <field name="view_id" ref="stock_inventory_request_count_form_view"/>
